--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- ds-->
 <head>
 	<title>BILLY HALIM</title>
 	<meta charset="utf-8">
@@ -195,7 +194,7 @@
 <script src="js/foundation.min.js"></script>
 <script src="js/foundation.magellan.js"></script>
 <script>
-		$(document).ready(function() {2
+		$(document).ready(function() {
 			$(document).foundation();
 			$(".titlecover").addClass("animated flipInY")
 		})
