--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- ds-->
 <head>
 	<title>BILLY HALIM</title>
 	<meta charset="utf-8">
@@ -14,7 +15,8 @@
 </head>
 <body>
 
-<nav class="top-bar" data-topbar data-options="is_hover: false" data-magellan-expedition="fixed">
+<div class="sticky">
+<nav class="top-bar" data-topbar data-options="is_hover: false" data-magellan-expedition>
   <ul class="title-area">
     <li class="name">
       <h1><a href="#">BILLY HALIM</a></h1>
@@ -32,6 +34,7 @@
     </ul>
   </section>
 </nav>
+</div>
 
 
 <header class="row cover">
@@ -194,7 +197,7 @@
 <script src="js/foundation.min.js"></script>
 <script src="js/foundation.magellan.js"></script>
 <script>
-		$(document).ready(function() {
+		$(document).ready(function() {2
 			$(document).foundation();
 			$(".titlecover").addClass("animated flipInY")
 		})
