--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
 <div class="sticky">
-<nav class="top-bar" data-topbar data-options="is_hover: false" data-magellan-expedition>
+<nav class="top-bar" data-topbar data-options="is_hover: false">
   <ul class="title-area">
     <li class="name">
       <h1><a href="#">BILLY HALIM</a></h1>
