--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- ds-->
 <head>
 	<title>BILLY HALIM</title>
 	<meta charset="utf-8">
@@ -196,7 +197,7 @@
 <script src="js/foundation.min.js"></script>
 <script src="js/foundation.magellan.js"></script>
 <script>
-		$(document).ready(function() {
+		$(document).ready(function() {2
 			$(document).foundation();
 			$(".titlecover").addClass("animated flipInY")
 		})
