--- a/index.html
+++ b/index.html
@@ -21,18 +21,7 @@
     <li class="name">
       <h1><a href="#">BILLY HALIM</a></h1>
     </li>
-    <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
   </ul>
-
-  <section class="top-bar-section">
-    <ul class="right">
-      <li data-magellan-arrival="edu"><a href="#edu">Education</a></li>
-      <li data-magellan-arrival="skill"><a href="#skill">Skill</a></li>
-      <li data-magellan-arrival="project"><a href="#project">Project</a></li>
-      <li data-magellan-arrival="quote"><a href="#quote">Quote</a></li>
-      <li data-magellan-arrival="me"><a href="#me">Contact Me</a></li>
-    </ul>
-  </section>
 </nav>
 </div>
 
@@ -53,7 +42,7 @@
   </div>
 </header>
 
-<div class="row portal" data-magellan-destination="edu"><a name="edu"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#00ABFF;">
 		<div class="small-12 medium-12 large-12 columns">
 			<span class="label success title">Education</span>
@@ -87,7 +76,7 @@
 
 
 
-<div class="row portal" data-magellan-destination="skill"><a name="skill"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#008DFF;">
 		<div class="small-12 medium-12 large-12 columns">
 			<span class="label success title">Skill</span>
@@ -133,7 +122,7 @@
 	</div>
 </div>
 
-<div class="row portal" data-magellan-destination="project"><a name="project"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#00ABFF;">
 		<div class="small-12 medium-12 large-12 columns">
 			<span class="label success title">Project</span>
@@ -149,7 +138,7 @@
 	</div>
 </div>
 
-<div class="row portal" data-magellan-destination="quote"><a name="quote"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#008DFF;">
 		<div class="small-12 medium-12 large-12 columns">
 			<span class="label success title">Quote</span>
@@ -162,7 +151,7 @@
 	</div>
 </div>
 
-<div class="row portal" data-magellan-destination="me"><a name="me"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#00ABFF;">
 		<div class="small-12 medium-12 large-12 columns">
 			<span class="label success title">Contact Me</span>
@@ -187,7 +176,7 @@
 	</div>
 </div>
 
-<div class="row portal" data-magellan-destination="quote"><a name="quote"></a>
+<div class="row portal">
 	<div class="small-12 medium-12 large-12 columns" style="background-color:#000000;">
 		<h4 style="color:#ffffff; text-align:center">Copyright &copy; 2016 - Billy Halim</h4> 
 	</div>
