Commit meta description

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>BILLY HALIM</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="Hi, My name is Billy Halim, 18 years old, a Computer Science student, born in Medan, Indonesia">
 	<link rel="stylesheet" href="css/foundation.min.css">
 	<link rel="stylesheet" href="css/app.css">
 	<link rel="stylesheet" href="css/media.css">
