Commit added progress bar

--- a/index.html
+++ b/index.html
@@ -86,21 +86,26 @@
 			<span class="label right warning title" style="margin-top:10px">Languages</span>
 		</div>
 		<div class="row" style="max-width:100%">
-			<div class="small-12 medium-6 large-3 columns langdiv">
+			<div class="small-12 medium-12 large-4 columns langdiv">
 				<img src="img/html5.svg" class="lang">
 				<h3>HTML</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 70%"></span>
+				</div>
 			</div>
-			<div class="small-12 medium-6 large-3 columns langdiv">
+			<div class="small-12 medium-12 large-4 columns langdiv">
 				<img src="img/css3.svg" class="lang">
 				<h3>CSS</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 60%"></span>
+				</div>
 			</div>
-			<div class="small-12 medium-6 large-3 columns langdiv">
+			<div class="small-12 medium-12 large-4 columns langdiv">
 				<img src="img/js.png" class="lang">
 				<h3>JavaScript</h3>
-			</div>
-			<div class="small-12 medium-6 large-3 columns end langdiv">
-				<img src="img/cpp.png" class="lang">
-				<h3>C++</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 45%"></span>
+				</div>
 			</div>
 		</div>
 		<div class="small-12 medium-12 large-12 columns">
@@ -110,14 +115,23 @@
 			<div class="small-12 medium-6 large-4 columns langdiv">
 				<img src="img/angular.png" class="lang">
 				<h3>AngularJS</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 50%"></span>
+				</div>
 			</div>
 			<div class="small-12 medium-6 large-4 columns langdiv">
 				<img src="img/bootstrap.png" class="lang">
 				<h3>Bootstrap</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 80%"></span>
+				</div>
 			</div>
 			<div class="small-12 medium-6 large-4 columns end langdiv">
 				<img src="img/foundation.png" class="lang">
 				<h3>Foundation</h3>
+				<div class="progress large-12 success round">
+					<span class="meter" style="width: 30%"></span>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -132,8 +146,8 @@
 			<div class="small-12 medium-6 large-4 columns langdiv">
 				<img src="img/todolist.png" class="pro">
 				<center><h4>ToDoList App with Angular 1.x</h4>
-				<a href="#" class="button round alert disabled">Source Code</a>
-				<a href="#" class="button round alert disabled">Demo</a></center>
+				<a href="https://github.com/billyhalim/EasyLister" class="button round alert">Source Code</a>
+				<a href="http://billyhalim.github.io/demo/EasyLister" class="button round alert">Demo</a></center>
 			</div>
 		</div>
 	</div>
